<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RadioTour</string>
    <string name="rider_name">Name</string>
    <string name="rider_team">Team</string>
    <string name="rider_team_short">Team Kurz</string>
    <string name="rider_country">Land</string>
    <string name="rider_start_nr">Startnummer</string>
    <string name="rider_detail_name">Detail Fahrer</string>
    <string name="rider_birthday">01.01.1990</string>
    <string name="lb_time">Zeit:</string>
    <string name="top">Spitze</string>
    <string name="new_group">Neu</string>
    <string name="field">Feld</string>
    <string name="follower">G#</string>
    <string name="detached">A#</string>
    <string name="start">Start</string>
    <string name="destination">Ziel</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="tb_position">Position</string>
    <string name="tb_startnr">Start-Nr.</string>
    <string name="tb_name">Name</string>
    <string name="tb_team">Team</string>
    <string name="tb_rang">Rang</string>
    <string name="lb_startnr">Start-Nr:</string>
    <string name="lb_name">Name:</string>
    <string name="lb_team">Team:</string>
    <string name="lb_birthday">Geburtstag:</string>
    <string name="lb_notes">Notiz:</string>
    <string name="lb_importetappe">Etappen importieren</string>
    <string name="lb_import">Import</string>
    <string name="lb_importmtable">Marschtabelle importieren</string>
    <string name="lb_importrider">Fahrer importieren</string>
    <string name="lb_importridertime">Fahrer mit Zeiten importieren</string>
    <string name="tb_timebonus">Zeitbonus</string>
    <string name="tb_pointsbonus">Punktebonus</string>
    <string name="tb_virtdeficite">Virt. Rückstand</string>
    <string name="tb_officialtime">Offizielle Zeit</string>
    <string name="tb_officialdeficte">Offizieller Rückstand</string>
    <string name="lb_stopwatch">Stoppuhr:</string>
    <string name="lb_speed">Ø Geschwindigkeit:</string>
    <string name="lb_spitzefeld">Spitze - Feld:</string>
    <string name="lb_spitzert">Spitze - RadioTour:</string>
    <string name="lb_emptyvalues">00:00</string>
    <string name="lb_etappe">Etappe:</string>
    <string name="lb_defaultspeed">0.0 km/h</string>
    <string name="lb_defaultetappe">0</string>
    <string name="lb_defaultdistance">0 m</string>
    <string name="lb_m_suffix">m</string>
    <string name="lb_km_suffix">km</string>
    <string name="lb_kmh_suffix">km/h</string>
    <string name="lb_racetime">Rennzeit:</string>
    <string name="lb_defaultaltitude">0 müM</string>
    <string name="lb_connectionstate">Verb.:</string>
    <string name="lb_fieldstate">Feld:</string>
    <string name="lb_leadstate">Spitze:</string>
    <string name="lb_rtstate">RT:</string>
    <string name="lb_gpsstate">GPS:</string>
    <string name="lb_distance">Renn km:</string>
    <string name="lb_hour">Stunden</string>
    <string name="lb_min">Minuten</string>
    <string name="lb_sec">Sekunden</string>
    <string name="lb_numberofwinners">Anzahl Gewinner</string>
    <string name="lb_maillotrider">Maillot Träger</string>
    <string name="hd_setdistance">Rennkilometer festlegen:</string>
    <string name="hd_getimportpath">Pfad für den Import auswählen:</string>
    <string name="hd_marchtable">Marschtabelle</string>
    <string name="hd_specialranking">Spezialklassement erstellen / bearbeiten</string>
    <string name="lb_save">Speichern</string>
    <string name="lb_cancel">Abbrechen</string>
    <string name="lb_spezialkl">Spezialklassement</string>
    <string name="lb_newkla">Neues Klassement</string>
    <string name="lb_wertung">Wertung</string>
    <string name="lb_altitude">Höhe:</string>
    <string name="desc_connectionimage">Verbindungsstatus</string>
    <string name="tab_ren">Rennen</string>
    <string name="tab_vir">Virtuelles Klassement</string>
    <string name="tab_spez">Spezialklassement</string>
    <string name="tab_adm">Admin</string>
    <string name="lb_maillots">Maillots:</string>
    <string name="lb_price">Preis:</string>
    <string name="lb_points">Punkte:</string>
    <string name="lb_default">Bergpreis</string>
    <string name="lb_delete">Löschen</string>
    <string name="lb_bonus">Bonus</string>
    <string name="lb_metersoversea_suffix">müM</string>
    <string name="lb_invalidnumber">Ungültige Nummer, Speicherung abgebrochen</string>
    <string name="lb_doubleassing">Mehrfachzuweisung, Speicherung abgebrochen</string>
    <string name="lb_newjudgement">Neue Wertung</string>
    <string name="lb_noconnection">Keine Verbindung</string>
    <string name="lb_color">Farbe</string>
    <string name="land">Land</string>
    <string name="in_the_race">Im Rennen</string>
    <string name="not_started">Nicht gestartet</string>
    <string name="give_up">Ausgeschieden</string>
    <string name="edit_rider_dialog_title">Bearbeite Fahrer</string>
    <string name="status">Status:</string>
    <string name="not_started_abbreviation">DNC</string>
    <string name="doctor">Arzt</string>
    <string name="fall">Sturz</string>
    <string name="defect">Defekt</string>
    <string name="giveup">Aufgabe</string>
    <string name="clear_selection">Auswahl aufheben</string>
    <string name="edit">Bearbeiten</string>
    <string name="splashscreen">Bitte warten, Daten werden geladen</string>
    <string name="new_judgement_dialog_title">Wertung erstellen / bearbeiten</string>
    <string name="addmaillot">Maillot hinzufügen</string>
    <string name="distance">Distanz</string>
    <string name="maillot_red">Rot</string>
    <string name="maillot_pink">Pink</string>
    <string name="maillot_reddot">Rot gepunktet</string>
    <string name="maillot_yellow">Gelb</string>
    <string name="maillot_green">Grün</string>
    <string name="maillot_white">Weiss</string>
    <string name="time_sec">Zeit (s)</string>
    <string name="point_money">Punkte / Geld</string>
    <string name="march_table">Marschtabelle</string>
    <string name="err_marchtable">Fehler beim darstellen der Marschtabelle, Dialog wird geschlossen</string>

</resources>