<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tb_startnr" />

        <EditText
            android:id="@+id/edittxt_startnr"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="text" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tb_name" />

        <EditText
            android:id="@+id/edittxt_name"
            android:layout_width="300dp"
            android:layout_height="match_parent" 
            android:inputType="text"/>
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/tb_team" />

        <EditText
            android:id="@+id/edittxt_team"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:editable="false"
            android:inputType="text" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lb_birthday" />

        <EditText
            android:id="@+id/edittxt_day"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="top"
            android:text="@string/status" />

        <RadioGroup
            android:id="@+id/rg_status"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/rdbtn_in_race"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/in_the_race"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/rdbtn_not_started"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/not_started"
                android:textSize="14dp" />

            <RadioButton
                android:id="@+id/rdbtn_out"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/give_up"
                android:textSize="14dp" />
        </RadioGroup>

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lb_notes" />

        <EditText
            android:id="@+id/edittxt_note"
            android:layout_width="300dp"
            android:layout_height="match_parent"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_abort"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lb_cancel" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/lb_save" />
    </LinearLayout>

</LinearLayout>