<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

       
        <TextView
            android:id="@+id/arzt"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/doctor"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/sturz"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/fall"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/defekt"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/defect"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/aufgabe"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/giveup"
            android:textSize="20dp" />
         <TextView
            android:id="@+id/not_started"
            android:layout_width="96dp"
            android:layout_height="35dp"
            android:gravity="center"
            android:text="@string/not_started_abbreviation"
            android:textSize="20dp" />
    </LinearLayout>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/clear"
            android:layout_width="480dp"
            android:layout_height="35dp"
            android:clickable="true"
            android:gravity="center"
            android:onClick="clearCheckedIntegersOnclick"
            android:text="@string/clear_selection"
            android:textSize="20dp" />
    </LinearLayout>

</LinearLayout>