<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="480dp"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_altitude"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_name"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtxt_judgement_name"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text=""
            android:inputType="text" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_distance"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_distance"
            android:textSize="16dp" />

        <EditText
            android:id="@+id/edtxt_judgement_distance"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="number"
            android:text="" />
    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/txt_stage"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/lb_etappe"
            android:textSize="16dp" />

        <Spinner
            android:id="@+id/spinner_stage"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="" />
    </LinearLayout>

    <Button
        android:id="@+id/dismissButton"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lb_cancel" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="480dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/lb_save" />

</LinearLayout>